--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -319,4 +319,11 @@
     <string name="shop_sub3">깔끔한 미니멀 디자인의 새로운 Blur 플레이어가 포함되어 있습니다.</string>
     <string name="shop_desc4">향후 프로 업데이트</string>
     <string name="shop_sub4">향후 업데이트에 추가되는 모든 프로 콘텐츠가 포함되어 있습니다!</string>
+    <string name="intro_dialog_pro_desc">모든 테마와 프로 기능을 잠금 해제하십시오.</string>
+    <string name="intro_dialog_title">테마 선택</string>
+    <string name="intro_dialog_sub">설정에서 언제든지 변경할 수 있습니다.</string>
+    <string name="intro_dialog_white_button">하얀</string>
+    <string name="intro_dialog_black_button">검정</string>
+    <string name="intro_dialog_pro_title">프로 테마 잠금 해제</string>
+    <string name="intro_dialog_pro_pack">프로 팩</string>
 </resources>
