--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -81,4 +81,23 @@
     <string name="new_playlist_title">Ny speleliste</string>
     <string name="rating_text">Liker du appen? Vi vil gjerne vite om det! Takk for tiden din.</string>
     <string name="rating_title">Beklager å avbryte, men vurderingen din er veldig viktig for oss :)</string>
+    <string name="shop_title">Lås opp alt</string>
+    <string name="shop_sub">Pro-pakken låser opp alle temaer, pro-funksjoner og støtter utvikling.</string>
+    <string name="shop_desc0">Ingen annonser noensinne</string>
+    <string name="shop_sub0">Denne appen støttes ikke av annonser og har som mål å forbli slik. Pro-versjonen vil alltid være annonsefri.</string>
+    <string name="shop_desc1">All Themes</string>
+    <string name="shop_sub1">Animert stjerneklar natt, uskarp, energisk og mer!</string>
+    <string name="shop_desc2">Pro-funksjoner</string>
+    <string name="shop_sub2">Inkludert sovetimer, tilpasning og mer!</string>
+    <string name="shop_desc3">Alle spiller nå skjermer</string>
+    <string name="shop_sub3">Inkluderer ny Blur-spiller med en ren minimal design.</string>
+    <string name="shop_desc4">Fremtidige Pro-oppdateringer</string>
+    <string name="shop_sub4">Inkluderer alt pro-innhold som er lagt til i fremtidige oppdateringer!</string>
+    <string name="intro_dialog_title">Velg et tema</string>
+    <string name="intro_dialog_sub">Endre dette når som helst i innstillingene.</string>
+    <string name="intro_dialog_white_button">hvit</string>
+    <string name="intro_dialog_black_button">svart</string>
+    <string name="intro_dialog_pro_title">Lås opp pro-temaer</string>
+    <string name="intro_dialog_pro_pack">Pro-pakke</string>
+    <string name="intro_dialog_pro_desc">Lås opp alle temaer og pro-funksjoner.</string>
 </resources>
