--- a/app/src/main/res/values-nn/strings.xml
+++ b/app/src/main/res/values-nn/strings.xml
@@ -100,4 +100,9 @@
     <string name="intro_dialog_pro_title">Lås opp pro-temaer</string>
     <string name="intro_dialog_pro_pack">Pro-pakke</string>
     <string name="intro_dialog_pro_desc">Lås opp alle temaer og pro-funksjoner.</string>
+    <string name="settings_change_theme">Lås opp alle temaer, pro-funksjoner og INGEN annonser</string>
+    <string name="settings_change_player">Spiller nå tema</string>
+    <string name="settings_change_background">Endre bakgrunn</string>
+    <string name="settings_pro_title">Få Premium</string>
+    <string name="settings_pro_desc">Lås opp alle temaer, pro-funksjoner og INGEN annonser</string>
 </resources>
