--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -332,4 +332,9 @@
     <string name="intro_dialog_pro_pack">حزمة برو</string>
     <string name="intro_dialog_pro_desc">افتح جميع السمات والميزات الاحترافية.</string>
     <string name="app_name" translatable="false">مشغل موسيقى</string>
+    <string name="settings_change_theme">تغيير النسق</string>
+    <string name="settings_change_player">يتم تشغيل السمة الآن</string>
+    <string name="settings_change_background">تغيير خلفية الشاشة</string>
+    <string name="settings_pro_title">احصل على بريميوم</string>
+    <string name="settings_pro_desc">افتح جميع السمات والميزات الاحترافية وبدون إعلانات</string>
 </resources>
