--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -372,7 +372,11 @@
     <string name="intro_dialog_pro_pack">Pro Pack</string>
     <string name="intro_dialog_pro_desc">Unlock all themes and pro features.</string>
 
-
+    <string name="settings_change_theme">Change theme</string>
+    <string name="settings_change_background">Change wallpaper</string>
+    <string name="settings_pro_title">Get Pro</string>
+    <string name="settings_pro_desc">Unlock all themes, pro features and NO Ads</string>
+    <string name="settings_change_player">Now playing theme</string>
 
 
 </resources>
