--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -331,4 +331,8 @@
     <string name="settings_change_background">배경 화면 변경</string>
     <string name="settings_pro_title">프리미엄 받기</string>
     <string name="settings_pro_desc">모든 테마, 프로 기능 및 광고 없음 잠금 해제</string>
+    <string name="this_is_pro">이것은 프리미엄 기능입니다</string>
+    <string name="shop_custom_bg">배경 화면 변경</string>
+    <string name="shop_custom_bg_desc">갤러리에서 배경 화면 선택</string>
+    <string name="shop_desc">프리미엄 팩은 모든 테마, 프리미엄 기능을 잠금 해제하고 향후 프리미엄 업데이트를 포함합니다.</string>
 </resources>
