--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -113,4 +113,8 @@ Vill du radera <b>%1$d</b> låtar?
     <string name="settings_change_background">Ändra bakgrundsbild</string>
     <string name="settings_pro_title">Skaffa Premium</string>
     <string name="settings_pro_desc">Lås upp alla teman, proffsfunktioner och INGA annonser</string>
+    <string name="this_is_pro">Detta är en premiumfunktion</string>
+    <string name="shop_custom_bg">Ändra bakgrundsbild</string>
+    <string name="shop_custom_bg_desc">Välj en bakgrundsbild från ditt galleri</string>
+    <string name="shop_desc">Premium-paketet låser upp alla teman, premiumfunktioner och inkluderar eventuella framtida premiumuppdateringar.</string>
 </resources>
